gcc/testsuite/gm2/iso/const/fail/testtrunc.mod
MODULE testtrunc ;

CONST
   foo = TRUNC (r) ;

VAR
   r: REAL ;
BEGIN

END testtrunc.
